Add File logging. Add console menu

--- a/Lab1/src/main/resources/log4j2.properties
+++ b/Lab1/src/main/resources/log4j2.properties
@@ -1,8 +1,13 @@
-rootLogger.level = info
-rootLogger.appenderRefs = stdout
-rootLogger.appenderRef.stdout.ref = STDOUT
-
-appender.console.type = Console
-appender.console.name = STDOUT
-appender.console.layout.type = PatternLayout
-appender.console.layout.pattern = %m%n
+rootLogger.level=info
+rootLogger.appenderRefs=stdout, file
+rootLogger.appenderRef.stdout.ref=STDOUT
+rootLogger.appenderRef.file.ref=FILE
+appender.console.type=Console
+appender.console.name=STDOUT
+appender.console.layout.type=PatternLayout
+appender.console.layout.pattern=%m%n
+appender.file.type=File
+appender.file.name=FILE
+appender.file.fileName=service.log
+appender.file.layout.type=PatternLayout
+appender.file.layout.pattern=%m%n
