--- a/Lab1/src/main/resources/log4j2.properties
+++ b/Lab1/src/main/resources/log4j2.properties
@@ -5,9 +5,9 @@ rootLogger.appenderRef.file.ref=FILE
 appender.console.type=Console
 appender.console.name=STDOUT
 appender.console.layout.type=PatternLayout
-appender.console.layout.pattern=%m%n
+appender.console.layout.pattern=%level %d{HH.mm.ss.SSS} %m%n
 appender.file.type=File
 appender.file.name=FILE
 appender.file.fileName=service.log
 appender.file.layout.type=PatternLayout
-appender.file.layout.pattern=%m%n
+appender.file.layout.pattern=%level %d{HH.mm.ss.SSS} %m%n
